# manual_mkdocs

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/assets/stylesheets/: font-pre.css  fonts.css  theme.css  theme2.css
docs/engineering/: index.md
docs/guides/: index.md
docs/infra-guide/: index.md
docs/infra-guide/oci/: index.md
docs/infra-guide/oci/operator/: index.md  multi-tenancy-architecture.md
docs/infra-guide/oci/user/: index.md  naming-and-tagging.md  resource-rules.md
docs/install-guide/: index.md
docs/install-guide/docker/: docker-install.md  index.md
docs/install-guide/jvm/: gc-tuning.md  index.md  installation.md  options.md  troubleshooting.md
docs/install-guide/oracle/: database-setup.md  index.md  oracle-install.md
docs/install-guide/postgresql/: database-setup.md  postgresql-install.md
docs/js/: custom.js
docs/products/: index.md
docs/products/pgcdc/: index.md
docs/products/pgcdc/basic-usage/: data-change.md
docs/products/pgcdc/getting-started/: postgresql-install.md
docs/products/pgcdc/testing/: docker-testing.md
docs/products/tablediff/: index.md
docs/products/tablediff/artifact/: adv.md
docs/products/tablediff/getting-started/: docker-compose.md
docs/products/tablediff/usages/: cli.md  config.md  index.md  output.md
docs/styles/: custom.css
