[project]
name = "manual-mkdocs"
version = "0.1.0"
description = "ArkData Manual"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-pdf-export-plugin>=0.5.10",
    "mkdocs-rtd-dropdown",
    "mkdocs-material",
    "mkdocs-bootstrap",
    "mkdocs-cinder>=1.2.0",
]
