[project]
name = "manual-mkdocs"
version = "0.1.0"
description = "ArkData Manual"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-pdf-export-plugin>=0.5.10",
    "mkdocs-cinder>=1.2.0",
    "pymdown-extensions",
    "mkdocs-material[imaging]",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "markdown-extensions>=0.0.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-pdf>=0.1.2",
]
